fixed overflow issue

--- a/css/_general.scss
+++ b/css/_general.scss
@@ -623,7 +623,7 @@ h3 {
     border-radius: 3px;
     padding: 0px;
     margin: 20px;
-    overflow: auto;
+    overflow: visible;
     border: 1px solid #dce1eb;
 }
 
